# graphene-federation

./: .gitignore  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.circleci/: config.yml
.github/workflows/: github-actions.yml  integration-tests.yml  integration_tests.yml  lint.yml  python-unit-tests.yml  tests.yml
examples/: entities.py  extend.py
graphene_federation/: __init__.py  entity.py  extend.py  graphql_compatibility.py  main.py  provides.py  service.py  types.py  utils.py  version.py
graphene_federation/tests/: test_annotation_corner_cases.py  test_entity.py  test_extend.py  test_key.py  test_provides.py  test_requires.py  test_schema_annotation.py
integration_tests/: README.md  docker-compose-3.yml  docker-compose.yml
integration_tests/federation/: Dockerfile  package-lock.json  package.json
integration_tests/federation_3/: Dockerfile  package-lock.json  package.json
integration_tests/graphene-2.x/: base.yaml  docker-compose.yaml
integration_tests/graphene-3.x/: base.yaml  docker-compose.yaml
integration_tests/service_3_b/: Dockerfile  requirements.txt
integration_tests/service_3_d/: Dockerfile  requirements.txt
integration_tests/service_a/: Dockerfile  requirements.txt
integration_tests/service_b/: Dockerfile  requirements.txt
integration_tests/service_c/: .gitignore  Dockerfile  requirements.txt
integration_tests/service_common/: Dockerfile  requirements.txt
tests/: test_extend.py
(+46 files in other folders)
